; ModuleID = '/home/carl/AnghaBench/linux/drivers/net/wireless/extr_wl3501_cs.c_wl3501_get_range.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/net/wireless/extr_wl3501_cs.c_wl3501_get_range.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.net_device = type { i32 }
%struct.iw_request_info = type { i32 }
%union.iwreq_data = type { %struct.TYPE_2__ }
%struct.TYPE_2__ = type { i32 }
%struct.iw_range = type { i32, i32, i32 }

@WIRELESS_EXT = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.net_device*, %struct.iw_request_info*, %union.iwreq_data*, i8*)* @wl3501_get_range to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @wl3501_get_range(%struct.net_device* %0, %struct.iw_request_info* %1, %union.iwreq_data* %2, i8* %3) #0 {
  %5 = alloca %struct.net_device*, align 8
  %6 = alloca %struct.iw_request_info*, align 8
  %7 = alloca %union.iwreq_data*, align 8
  %8 = alloca i8*, align 8
  %9 = alloca %struct.iw_range*, align 8
  store %struct.net_device* %0, %struct.net_device** %5, align 8
  store %struct.iw_request_info* %1, %struct.iw_request_info** %6, align 8
  store %union.iwreq_data* %2, %union.iwreq_data** %7, align 8
  store i8* %3, i8** %8, align 8
  %10 = load i8*, i8** %8, align 8
  %11 = bitcast i8* %10 to %struct.iw_range*
  store %struct.iw_range* %11, %struct.iw_range** %9, align 8
  %12 = load %union.iwreq_data*, %union.iwreq_data** %7, align 8
  %13 = bitcast %union.iwreq_data* %12 to %struct.TYPE_2__*
  %14 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %13, i32 0, i32 0
  store i32 12, i32* %14, align 4
  %15 = load %struct.iw_range*, %struct.iw_range** %9, align 8
  %16 = call i32 @memset(%struct.iw_range* %15, i32 0, i32 12)
  %17 = load i32, i32* @WIRELESS_EXT, align 4
  %18 = load %struct.iw_range*, %struct.iw_range** %9, align 8
  %19 = getelementptr inbounds %struct.iw_range, %struct.iw_range* %18, i32 0, i32 2
  store i32 %17, i32* %19, align 4
  %20 = load %struct.iw_range*, %struct.iw_range** %9, align 8
  %21 = getelementptr inbounds %struct.iw_range, %struct.iw_range* %20, i32 0, i32 0
  store i32 1, i32* %21, align 4
  %22 = load %struct.iw_range*, %struct.iw_range** %9, align 8
  %23 = getelementptr inbounds %struct.iw_range, %struct.iw_range* %22, i32 0, i32 1
  store i32 2000000, i32* %23, align 4
  ret i32 0
}

declare dso_local i32 @memset(%struct.iw_range*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
